crates/vvv/src/output/human/snapshots/vvv__output__human__tests__schema_document.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "render(|r| r.report(&Answer::Schema(schema)).unwrap())"
---
{
  "$id": "urn:vvv:schema:1:history:arguments:c25e2767619054110dab6753f461574ebebbc91dd79bdacf1051b05091c16f8d",
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "required": [],
  "title": "history arguments",
  "type": "object"
}
--- stderr ---
