crates/vvv/src/output/human/snapshots/vvv__output__human__tests__search_empty.snap
---
source: crates/vvv/src/output/human/mod.rs
assertion_line: 537
expression: render(|r| r.search(&empty).unwrap())
---
--- stderr ---
∅ no matches
