crates/vvv/src/output/human/snapshots/vvv__output__human__tests__search_with_skipped_language.snap
---
source: crates/vvv/src/output/human/mod.rs
assertion_line: 542
expression: "render(|r| r.search(&fx::search_with_skipped()).unwrap())"
---
● 1  1 file
src/lang/mod.rs
  1 ●   64:1    trait Language  pub trait Language: Send + Sync {  +8  ◆ vvv_core::lang::Language

○ 3  2 files
src/lang/registry.rs
  2 →    4:13   use super::{Language, LanguageId};

src/lib.rs
  3 →   26:16   pub use lang::{Language, LanguageId};
  4     41:5    Language::new()
--- stderr ---
● 1  ○ 3  3 files
warning: typescript skipped: invalid pattern: Multiple AST nodes are detected. Please check the pattern source `fn $F($$$A) { $$$B }`.
hint: a pattern is written in one language; pass --lang to search that one only (the matches above are complete for the others)
