crates/vvv/src/output/human/snapshots/vvv__output__human__tests__surface_of_a_package.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "render(|r| r.report(&Answer::Surface(fx::surface())).unwrap())"
---
surface vvv_core

● struct Plan   src/plan/mod.rs:13:5   ← 4
  ↗ vvv_core::Plan
● function apply   src/plan/mod.rs:41:5   ← 0
--- stderr ---
● 2   ← 4 imports
