crates/vvv/src/output/human/snapshots/vvv__output__human__tests__validation_failure.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "render(|r| r.report(&Answer::ValidatePlan(report.clone())).unwrap())"
---
Validation did not pass
compile: failed
error: expected Engine, found Runtime
--- stderr ---
